- update some dependencies to obviate some security vulnerabilities; - implement a basic version of a PDF-filler using PDF-Lib; - generate new PDF on supporting characters

--- a/WebTools/index.html
+++ b/WebTools/index.html
@@ -65,6 +65,13 @@
             <b>WHAT'S NEW?</b>
             <br /><br />
             <ul>
+                <li>Basic support for the Multi-Discipline talent has been added.</li>
+                <li>Added support for Klingon character generation.</li>
+                <li>Revisions have been made to the talent list to make it easier to see the complete list of talents.</li>
+                <li>A bug has been fixed on the character creation relating to characters who have more then the maximum value in an attribute.</li>
+            </ul>
+            <b>Earlier Updates</b>
+            <ul>
                 <li>Fixed a bug that allowed Young Officers to be able to select Commanding Officer role.</li>
                 <li>Fixed a bug that allowed Enlisted characters to select Executive Officer role.</li>
                 <li>Liberated Borg is now available as a species.</li>
@@ -79,6 +86,7 @@
 
     <script src="dist/trek.js"></script>
     <script src="version.js"></script>
+    <script src="res/js/download.min.js"></script>
 
     <script>
         function setupGuard() {
